--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       </li>
 
       <!-- AI Projects -->
-      <li class="project-item active" data-filter-item data-category="AI Projects">
+      <li class="project-item active" data-filter-item data-category="Session">
         <a href="https://huggingface.co/spaces/prajyot2003/gpt2-text-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -794,7 +794,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="AI Projects">
+      <li class="project-item active" data-filter-item data-category="Session">
         <a href="https://huggingface.co/spaces/slurpio/Megan-AI" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -805,7 +805,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="AI Projects">
+      <li class="project-item active" data-filter-item data-category="Session">
         <a href="https://huggingface.co/spaces/deekshasoota/mygenaitext-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -816,7 +816,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="AI Projects">
+      <li class="project-item active" data-filter-item data-category="Session">
         <a href="https://huggingface.co/spaces/Sanjay1203/gpt2-text-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -827,7 +827,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="AI Projects">
+      <li class="project-item active" data-filter-item data-category="Session">
         <a href="https://huggingface.co/spaces/krishna34-aimlcurious/AI_ML_CURIOUS" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -838,7 +838,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="AI Projects">
+      <li class="project-item active" data-filter-item data-category="Session">
         <a href="https://huggingface.co/spaces/sohamauluck/text-to-image-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -858,49 +858,49 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Agriculture Assistant: Real-time Plant Monitoring</h3>
           <p class="project-category">Plant & Agriculture</p>
         </a>
-      </li>
+      </li> -->
 
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Crop Disease Identifier (Rule-based)</h3>
           <p class="project-category">Plant & Agriculture</p>
         </a>
-      </li>
+      </li> -->
 
       <!-- Color & Object Detection -->
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Intelligent Color Recognition System</h3>
           <p class="project-category">Color & Object Detection</p>
         </a>
       </li>
-
-      <li class="project-item active" data-filter-item data-category="Session">
+ -->
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Smart Object Highlighter</h3>
           <p class="project-category">Color & Object Detection</p>
         </a>
-      </li>
+      </li> -->
 
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Automatic Fruit Ripeness Detector</h3>
           <p class="project-category">Color & Object Detection</p>
         </a>
       </li>
-
+ -->
       <!-- Human-Centric -->
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">AI Mood Detector with OpenCV</h3>
           <p class="project-category">Human-Centric</p>
         </a>
-      </li>
+      </li> -->
 
       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
@@ -909,27 +909,27 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Gesture-Controlled System</h3>
           <p class="project-category">Human-Centric</p>
         </a>
-      </li>
+      </li> -->
 
       <!-- Smart City -->
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Traffic Light Color Recognition System</h3>
           <p class="project-category">Smart City & Safety</p>
         </a>
-      </li>
+      </li> -->
 
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Vehicle Counter using OpenCV</h3>
           <p class="project-category">Smart City & Safety</p>
         </a>
-      </li>
+      </li> -->
 
       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
@@ -939,26 +939,26 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       </li>
 
       <!-- Fun / Creative -->
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Virtual Painter with OpenCV</h3>
           <p class="project-category">Fun / Creative</p>
         </a>
-      </li>
+      </li> -->
 
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">AR Mask Filter</h3>
           <p class="project-category">Fun / Creative</p>
         </a>
-      </li>
-
+      </li> -->
+<!-- 
       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Motion-Controlled Game</h3>
           <p class="project-category">Fun / Creative</p>
         </a>
-      </li>
+      </li> -->
 
     </ul>
   </section>
