--- a/index.html
+++ b/index.html
@@ -852,11 +852,22 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       <!-- New SESSION Category -->
       <!-- Plant & Agriculture -->
       <li class="project-item active" data-filter-item data-category="Session">
+        <a href="https://huggingface.co/spaces/sohamauluck/text-to-image-generator" target="_blank">
+          <figure class="project-img">
+            <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+            <img src="./assets/images/leaf.png" alt="Text-to-Image Generator" loading="lazy">
+          </figure>
+          <h3 class="project-title">Soham Auluck – Text-to-Image Generator</h3>
+          <p class="project-category">AI Projects</p>
+        </a>
+      </li>
+
+<!--          <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Smart Leaf Health Detector using OpenCV</h3>
           <p class="project-category">Plant & Agriculture</p>
         </a>
-      </li>
+      </li> -->
 
 <!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
@@ -901,13 +912,23 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
           <p class="project-category">Human-Centric</p>
         </a>
       </li> -->
+        <li class="project-item active" data-filter-item data-category="Session">
+        <a href="https://huggingface.co/spaces/sohamauluck/text-to-image-generator" target="_blank">
+          <figure class="project-img">
+            <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+            <img src="./assets/images/face.png" alt="Text-to-Image Generator" loading="lazy">
+          </figure>
+          <h3 class="project-title">Smart Attendence System(Face detection)</h3>
+          <p class="project-category">Humman-centric</p>
+        </a>
+      </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+<!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
           <h3 class="project-title">Smart Attendance System (Face Detection)</h3>
           <p class="project-category">Human-Centric</p>
         </a>
-      </li>
+      </li> -->
 
 <!--       <li class="project-item active" data-filter-item data-category="Session">
         <a href="#">
@@ -930,13 +951,23 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
           <p class="project-category">Smart City & Safety</p>
         </a>
       </li> -->
-
-      <li class="project-item active" data-filter-item data-category="Session">
-        <a href="#">
+        <li class="project-item active" data-filter-item data-category="Session">
+        <a href="https://huggingface.co/spaces/sohamauluck/text-to-image-generator" target="_blank">
+          <figure class="project-img">
+            <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+            <img src="./assets/images/helmet.avif" alt="Text-to-Image Generator" loading="lazy">
+          </figure>
           <h3 class="project-title">Helmet Detection System</h3>
           <p class="project-category">Smart City & Safety</p>
         </a>
       </li>
+
+<!--       <li class="project-item active" data-filter-item data-category="Session">
+        <a href="#">
+          <h3 class="project-title">Helmet Detection System</h3>
+          <p class="project-category">Smart City & Safety</p>
+        </a>
+      </li> -->
 
       <!-- Fun / Creative -->
 <!--       <li class="project-item active" data-filter-item data-category="Session">
