--- a/index.html
+++ b/index.html
@@ -1008,9 +1008,16 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
 
   <section class="mapbox" data-mapbox>
     <figure>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119065.02905812931!2d78.99010853386426!3d21.16106590212765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c0a5a31faf13%3A0x19b37d06d0bb3e2b!2sNagpur%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1754415723567!5m2!1sen!2sin"
-        width="400" height="300" loading="lazy"></iframe>
+   <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4836270.309764928!2d68.1766450623212!3d22.351114851935335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff6f64b6e79%3A0x40fb3937d42654d8!2sIndia!5e0!3m2!1sen!2sin!4v1693552290234!5m2!1sen!2sin" 
+  width="600" 
+  height="450" 
+  style="border:0;" 
+  allowfullscreen="" 
+  loading="lazy" 
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
     </figure>
   </section>
 
