--- a/index.html
+++ b/index.html
@@ -552,68 +552,85 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
   </section>
 
   <!-- Experience Section -->
-  <section class="timeline">
+ <section class="timeline">
 
-    <div class="title-wrapper">
-      <div class="icon-box">
-        <ion-icon name="briefcase-outline"></ion-icon>
-      </div>
-      <h3 class="h3">Experience</h3>
+  <div class="title-wrapper">
+    <div class="icon-box">
+      <ion-icon name="briefcase-outline"></ion-icon>
     </div>
+    <h3 class="h3">Experience</h3>
+  </div>
 
-    <ol class="timeline-list">
+  <ol class="timeline-list">
 
-<li class="timeline-item">
-  <h4 class="h4 timeline-item-title">STEM Educator & Designer</h4>
-  <!-- <span>2017 — Present</span> -->
-  <p class="timeline-text">
-    Translated STEM concepts into immersive experiences — from robotics labs to AI-driven learning journeys. Designed interdisciplinary education models for academia and industry, ensuring that knowledge and application evolve together.
-  </p>
-</li>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">STEM Educator & Designer</h4>
+      <p class="timeline-text">
+        Translated STEM concepts into immersive experiences — from robotics labs to AI-driven learning journeys. Designed interdisciplinary education models for academia and industry, ensuring that knowledge and application evolve together.
+      </p>
+    </li>
 
-<li class="timeline-item">
-  <h4 class="h4 timeline-item-title">IoT & Robotics Trainer</h4>
-  <!-- <span>2018 — Present</span> -->
-  <p class="timeline-text">
-    Guided learners in building intelligent systems that sense, move, and decide. Focused on transforming IoT and robotics from static diagrams into working prototypes that reflect the intelligence of future technologies.
-  </p>
-</li>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">IoT & Robotics Trainer</h4>
+      <p class="timeline-text">
+        Guided learners in building intelligent systems that sense, move, and decide. Focused on transforming IoT and robotics from static diagrams into working prototypes that reflect the intelligence of future technologies.
+      </p>
+    </li>
 
-<li class="timeline-item">
-  <h4 class="h4 timeline-item-title">Generative AI Trainer & Science Communicator</h4>
-  <!-- <span>2020 — Present</span> -->
-  <p class="timeline-text">
-    Conducted immersive programs on AI, machine learning, and generative models across IITs, universities, and innovation ecosystems. Simplified complex systems into approachable, actionable, and inspiring projects, bridging research with real-world applications.
-  </p>
-</li>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">Generative AI Trainer & Science Communicator</h4>
+      <p class="timeline-text">
+        Conducted immersive programs on AI, machine learning, and generative models across IITs, universities, and innovation ecosystems. Simplified complex systems into approachable, actionable, and inspiring projects, bridging research with real-world applications.
+      </p>
+    </li>
 
-<li class="timeline-item">
-  <h4 class="h4 timeline-item-title">Mentor of Change – Atal Innovation Mission, NITI Aayog</h4>
-  <!-- <span>2018 — Present</span> -->
-  <p class="timeline-text">
-    Served as a Mentor of Change, nurturing curiosity and innovation at Atal Tinkering Labs. Helped students transform raw ideas into practical prototypes with real-world impact.
-  </p>
-</li>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">Mentor of Change – Atal Innovation Mission, NITI Aayog</h4>
+      <p class="timeline-text">
+        Served as a Mentor of Change, nurturing curiosity and innovation at Atal Tinkering Labs. Helped students transform raw ideas into practical prototypes with real-world impact.
+      </p>
+    </li>
 
-<li class="timeline-item">
-  <h4 class="h4 timeline-item-title">Vice President – Junior Chamber International (Individual Opportunity)</h4>
-  <!-- <span>2019 — 2021</span> -->
-  <p class="timeline-text">
-    Led initiatives beyond training — from social awareness campaigns to donation drives and large-scale workshops. Proved that innovation extends beyond technology, shaping communities and fostering inclusive growth.
-  </p>
-</li>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">Vice President – Junior Chamber International (Individual Opportunity)</h4>
+      <p class="timeline-text">
+        Led initiatives beyond training — from social awareness campaigns to donation drives and large-scale workshops. Proved that innovation extends beyond technology, shaping communities and fostering inclusive growth.
+      </p>
+    </li>
 
-<li class="timeline-item">
-  <h4 class="h4 timeline-item-title">Research & Innovation</h4>
-  <!-- <span>2018 — Present</span> -->
-  <p class="timeline-text">
-    Filed a national patent for an AI-based Lanthanide Garnet Phosphor Classification Device and published three research papers contributing to applied AI and interdisciplinary technologies.
-  </p>
-</li>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">Research & Innovation</h4>
+      <p class="timeline-text">
+        Filed a national patent for an AI-based Lanthanide Garnet Phosphor Classification Device and published three research papers contributing to applied AI and interdisciplinary technologies.
+      </p>
+    </li>
 
-    </ol>
+    <!-- 🔥 Highlighted Research Projects -->
+    <li class="timeline-item highlight">
+      <h4 class="h4 timeline-item-title">Deep Learning Based Query Expansion</h4>
+      <p class="timeline-text">
+        A Transformer-driven approach for enhanced information retrieval (Scopus indexed).
+      </p>
+    </li>
 
-  </section>
+    <li class="timeline-item highlight">
+      <h4 class="h4 timeline-item-title">AI–IoT Ecosystem in Education</h4>
+      <p class="timeline-text">
+        Designed a privacy-preserving AIoT framework to strengthen digital transformation in the education sector.
+      </p>
+    </li>
+
+    <li class="timeline-item highlight">
+      <h4 class="h4 timeline-item-title">Computational Material Science + AIoT</h4>
+      <p class="timeline-text">
+        Integration of computational material science with AIoT for enhanced IoT applications, bridging physical sciences and intelligent systems.
+      </p>
+    </li>
+
+  </ol>
+
+</section>
+
 
   <!-- Skills Section -->
   <section class="skill">
