--- a/index.html
+++ b/index.html
@@ -599,9 +599,9 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
     </li>
 
     <li class="timeline-item">
-      <h4 class="h4 timeline-item-title">Research & Innovation</h4>
+      <h4 class="h4 timeline-item-title">Research Paper Published</h4>
       <p class="timeline-text">
-        Filed a national patent for an AI-based Lanthanide Garnet Phosphor Classification Device and published three research papers contributing to applied AI and interdisciplinary technologies.
+       <b> Filed a national patent</b> for an AI-based Lanthanide Garnet Phosphor Classification Device and <b>published three research papers </b> contributing to applied AI and interdisciplinary technologies.
       </p>
     </li>
 
@@ -734,7 +734,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <li class="select-item"><button data-select-item>IOT & Robotics</button></li>
         <li class="select-item"><button data-select-item>Education Tools</button></li>
         <li class="select-item"><button data-select-item>Sustainability</button></li>
-        <li class="select-item"><button data-select-item>Session</button></li>
+        <li class="select-item"><button data-select-item>Session(Made by Students)</button></li>
       </ul>
     </div>
 
@@ -800,7 +800,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       </li>
 
       <!-- AI Projects -->
-      <li class="project-item active" data-filter-item data-category="Session">
+      <li class="project-item active" data-filter-item data-category="Session(Made by Students)">
         <a href="https://huggingface.co/spaces/prajyot2003/gpt2-text-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -811,7 +811,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+      <li class="project-item active" data-filter-item data-category="Session(Made by Students)">
         <a href="https://huggingface.co/spaces/slurpio/Megan-AI" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -822,7 +822,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+      <li class="project-item active" data-filter-item data-category="Session(Made by Students)">
         <a href="https://huggingface.co/spaces/deekshasoota/mygenaitext-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -833,7 +833,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+      <li class="project-item active" data-filter-item data-category="Session(Made by Students)">
         <a href="https://huggingface.co/spaces/Sanjay1203/gpt2-text-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -844,7 +844,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+      <li class="project-item active" data-filter-item data-category="Session(Made by Students)">
         <a href="https://huggingface.co/spaces/krishna34-aimlcurious/AI_ML_CURIOUS" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -855,7 +855,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         </a>
       </li>
 
-      <li class="project-item active" data-filter-item data-category="Session">
+      <li class="project-item active" data-filter-item data-category="Session(Made by Students)">
         <a href="https://huggingface.co/spaces/sohamauluck/text-to-image-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
@@ -868,7 +868,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
 
       <!-- New SESSION Category -->
       <!-- Plant & Agriculture -->
-      <li class="project-item active" data-filter-item data-category="Session">
+      <li class="project-item active" data-filter-item data-category="Session(Made by Students)">
         <a href="https://huggingface.co/spaces/sohamauluck/text-to-image-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
