--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       <li class="filter-item"><button data-filter-btn>IOT & Robotics</button></li>
       <li class="filter-item"><button data-filter-btn>Education Tools</button></li>
       <li class="filter-item"><button data-filter-btn>Sustainability</button></li>
-      <li class="filter-item"><button data-filter-btn>Session <p style="font-weight: lighter;">(made by students)</p></button></li>
+      <li class="filter-item"><button data-filter-btn>Session</button></li>
     </ul>
 
     <!-- Filter Dropdown -->
