--- a/index.html
+++ b/index.html
@@ -600,9 +600,11 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
 
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Research Paper Published</h4>
-      <p class="timeline-text">
-       <b> Filed a national patent</b> for an AI-based Lanthanide Garnet Phosphor Classification Device and <b>published three research papers </b> contributing to applied AI and interdisciplinary technologies.
-      </p>
+     <p class="timeline-text">
+  <strong>Filed a national patent</strong> for an AI-based Lanthanide Garnet Phosphor Classification Device and 
+  <strong>published three research papers</strong> contributing to applied AI and interdisciplinary technologies.
+</p>
+
     </li>
 
     <!-- 🔥 Highlighted Research Projects -->
