--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -601,8 +601,8 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
     <li class="timeline-item">
       <h4 class="h4 timeline-item-title">Research Paper Published</h4>
      <p class="timeline-text">
-  <strong>Filed a national patent</strong> for an AI-based Lanthanide Garnet Phosphor Classification Device and 
-  <strong>published three research papers</strong> contributing to applied AI and interdisciplinary technologies.
+  <b>Filed a national patent</b> for an AI-based Lanthanide Garnet Phosphor Classification Device and 
+  <b>published three research papers</b> contributing to applied AI and interdisciplinary technologies.
 </p>
 
     </li>
